Se eliminó el fa-5x del logo en el html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <section class="banner head">
-            <div class="imagen"><i class="fas fa-stethoscope fa-5x"></i></div>
+            <div class="imagen"><i class="fas fa-stethoscope"></i></div>
             <div><h1>Clinic On Line</h1></div>
             <nav class="menu">
                 <ul> 
