cambio de letra

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div><h2>® Derechos Reservados</h2></div>
             <div>
                 <a class="contacto" name="contacto"><h2>Contacto</h2></a>
-                <p>Puedes escribirnos directamente a nuestro emal: contacto@cliniconline.com</p><br>
+                <p>Puedes escribirnos directamente a nuestro email: contacto@cliniconline.com</p><br>
                 <p>Tambien puedes suscribirte a nuestra lista de correo a través del siguiente formulario.</p>
                 <form action="#" method="get">
                     <input type="email" id="mail" name="user_mail" placeholder="Ingrese su email">
