--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <form action="#">
                 <a name="nosotros"><input type="submit" value="NOSOTROS" /></a>
                 <div class="texto">
-                    <h2>Somos un equipo de profesionales de las salud que estamos a disposición de la comunidad 24/7</h2>
+                    <h2>Somos un equipo de profesionales del <area shape="" coords="" href="" alt=""> salud que estamos a disposición de la comunidad 24/7</h2>
                 </div>
             </form>
         </div>
@@ -57,7 +57,7 @@
                         <input id="activar2" type="checkbox">
                         <label class="inputlabel" for="activar2">Más Información</label>
                             <div class="desplegable">
-                                <p>Nuestro servicio cuenta con disponibilidad de turnos de día y/o noche, de lunes a domingo (aseo, higiene, confort, administración de medicamentos y seguridad del paciente).</p>
+                                <p>Nuestro servicio de Enfermeras o Tens cuenta con disponibilidad de turnos de día y/o noche, de lunes a domingo (aseo, higiene, confort, administración de medicamentos y seguridad del paciente).</p>
                             </div>
                     </div>
                 </article>
@@ -69,7 +69,7 @@
                         <input id="activar3" type="checkbox">
                         <label class="inputlabel" for="activar3">Más Información</label>
                             <div class="desplegable">
-                                <p>Nuestro equipo multidisciplinario de médicos y enfermeras brindaran asesoría y solución a su problema medico sin salir de su domicilio.</p>
+                                <p>Nuestro equipo multidisciplinario de médicos y enfermeras brindaran asesoría y solución a su problema medico sin salir de su domicilio, ayudando tamben a la prevencion del Covid-19.</p>
                             </div>
                     </div>
                 </article>
@@ -114,7 +114,7 @@
             <div><h2>® Derechos Reservados</h2></div>
             <div>
                 <a class="contacto" name="contacto"><h2>Contacto</h2></a>
-                <p>Puedes escribirnos directamente a nuestro email: contacto@cliniconline.com</p><br>
+                <p>Contactanos a nuestro numero telefonico 600 600 911 o Puedes escribirnos directamente a nuestro email: contacto@cliniconline.com</p><br>
                 <p>Tambien puedes suscribirte a nuestra lista de correo a través del siguiente formulario.</p>
                 <form action="#" method="get">
                     <input type="email" id="mail" name="user_mail" placeholder="Ingrese su email">
