cambio de textos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <input id="activar1" type="checkbox">
                         <label class="inputlabel" for="activar1">Más Información</label>
                             <div class="desplegable">
-                                <p>Nuestros pacientes son estabilizados en el lugar del incidente, si la ocasión lo amerita se traslada a su centro asistencial más cercano de acuerdo con su plan.</p>
+                                <p> Contamos con equipo DEA a cargo de los mejores profesionales,Nuestros pacientes son estabilizados en el lugar del incidente, si la ocasión lo amerita se traslada a su centro asistencial más cercano de acuerdo con su plan.</p>
                             </div>
                     </div>
                 </article>
@@ -82,7 +82,7 @@
                     <div class="imagen"><img src="img/nutricion.jpeg" alt="imagen"></div>
                     <div class="texto">
                         <h2>Seguimiento Nutricional</h2>
-                        <p>Este proyecto es una pauta exclusiva a pacientes con Hipertensión HTA, Diabetes DM y Dislipidemia. Incluyendo acondicionamiento físico a cargo de nuestros Kinesiólogos.</p>
+                        <p>Este proyecto es una pauta nutricional exclusiva a pacientes con Hipertensión HTA, Diabetes DM y Dislipidemia mediante un exaustivo estudio de cada paciente. Incluyendo acondicionamiento físico a cargo de nuestros Kinesiólogos.</p>
                     </div>
                 </article>
                 <article class="item izquierda">
