--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <form action="#">
                 <a name="nosotros"><input type="submit" value="NOSOTROS" /></a>
                 <div class="texto">
-                    <h2>Somos un equipo de profesionales del <area shape="" coords="" href="" alt=""> salud que estamos a disposición de la comunidad 24/7</h2>
+                    <h2>Somos un equipo de profesionales del area salud que estamos a disposición de la comunidad 24/7</h2>
                 </div>
             </form>
         </div>
